basic design, added sql dumps to repo

--- a/app/realXP/Views/Home/Index.cshtml
+++ b/app/realXP/Views/Home/Index.cshtml
@@ -1,31 +1,30 @@
 ﻿@{
-    ViewBag.Title = "Home Page";
+    ViewBag.Title = "Home";
 }
 
 <div class="jumbotron">
-    <h1>ASP.NET</h1>
-    <p class="lead">ASP.NET is a free web framework for building great Web sites and Web applications using HTML, CSS and JavaScript.</p>
-    <p><a href="http://asp.net" class="btn btn-primary btn-large">Learn more &raquo;</a></p>
+    <img class="img-responsive" alt="realxp" src="/Content/Images/realxp-dark.png" />
+    <p class="lead" style="margin-left: 40px;">Experience and interact with amazing live events around the world from the comfort of your home.</p>
+    <p><a href="/Events" class="btn btn-primary btn-danger" style="margin-left: 40px;">Find Events Now &raquo;</a></p>
 </div>
 
 <div class="row">
     <div class="col-md-4">
-        <h2>Getting started</h2>
-        <p>
-            ASP.NET MVC gives you a powerful, patterns-based way to build dynamic websites that
-            enables a clean separation of concerns and gives you full control over markup
-            for enjoyable, agile development.
-        </p>
-        <p><a class="btn btn-default" href="http://go.microsoft.com/fwlink/?LinkId=301865">Learn more &raquo;</a></p>
+        <h2>Feel the Atmosphere</h2>
+        <p>With realxp you are part of the atmosphere.</p>
+        <p>Turn your head to see the fans around you, raise your voice and cheer your team, sing along with your favourite artist...it is all possible with realxp.</p>
+        <img src="/Content/Images/Atmosphere.png" alt="Atmosphere" class="img-rounded img-responsive">
+        <p style="margin-top: 20px"><a class="btn btn-danger" href="#">View Events &raquo;</a></p>
     </div>
     <div class="col-md-4">
-        <h2>Get more libraries</h2>
-        <p>NuGet is a free Visual Studio extension that makes it easy to add, remove, and update libraries and tools in Visual Studio projects.</p>
-        <p><a class="btn btn-default" href="http://go.microsoft.com/fwlink/?LinkId=301866">Learn more &raquo;</a></p>
+        <h2>Latest Technology</h2>
+        <p>360&deg; HD cameras, blah blah blah</p>
+        <p style="margin-top: 20px"><a class="btn btn-danger" href="#">Learn More &raquo;</a></p>
     </div>
     <div class="col-md-4">
-        <h2>Web Hosting</h2>
-        <p>You can easily find a web hosting company that offers the right mix of features and price for your applications.</p>
-        <p><a class="btn btn-default" href="http://go.microsoft.com/fwlink/?LinkId=301867">Learn more &raquo;</a></p>
+        <h2>Worldwide Venues</h2>
+        <p>With realxp you have access to the best venues around the world, virtually.</p>
+        <img src="/Content/Images/venue_Arsenal.png" alt="Atmosphere" class="img-rounded img-responsive">
+        <p style="margin-top: 20px"><a class="btn btn-danger" href="#">View Venues &raquo;</a></p>
     </div>
 </div>
