--- a/app/realXP/Views/Home/About.cshtml
+++ b/app/realXP/Views/Home/About.cshtml
@@ -1,7 +1,9 @@
 ﻿@{
-    ViewBag.Title = "About";
+    ViewBag.Title = "About realxp";
 }
-<h2>@ViewBag.Title.</h2>
+<h2>@ViewBag.Title</h2>
 <h3>@ViewBag.Message</h3>
 
-<p>Use this area to provide additional information.</p>
+<p>Ever wanted to attend your favourite sporting or music event but couldn’t make it to the venue?</p>
+<p>What if you could be best seat for the Champions League final, live from the comfort of your own home?</p>
+<p>Virtual Reality is now a reality... using live, high definition, stereoscopic 360˚ views and audio realxp puts you in the venue for the real experience.</p>
