--- a/app/realXP/Views/Shared/_Layout.cshtml
+++ b/app/realXP/Views/Shared/_Layout.cshtml
@@ -23,7 +23,7 @@
                 <ul class="nav navbar-nav">
                     <li>@Html.ActionLink("Home", "Index", "Home")</li>
                     <li>@Html.ActionLink("Events", "Index", "Events")</li>
-                    <li>@Html.ActionLink("Venues", "Index", "Venues")</li>
+                    <li>@Html.ActionLink("Venues", "Index", "Venue")</li>
                     <li>@Html.ActionLink("Join Live Event", "JoinEvent", "Events")</li>
                     <li>@Html.ActionLink("About", "About", "Home")</li>
                 </ul>
