--- a/app/realXP/Views/Home/Index.cshtml
+++ b/app/realXP/Views/Home/Index.cshtml
@@ -11,20 +11,21 @@
 <div class="row">
     <div class="col-md-4">
         <h2>Feel the Atmosphere</h2>
+        <p></p><img src="/Content/Images/Atmosphere.png" alt="Atmosphere" class="img-rounded img-responsive"></p>
         <p>With realxp you are part of the atmosphere.</p>
         <p>Turn your head to see the fans around you, raise your voice and cheer your team, sing along with your favourite artist...it is all possible with realxp.</p>
-        <img src="/Content/Images/Atmosphere.png" alt="Atmosphere" class="img-rounded img-responsive">
         <p style="margin-top: 20px"><a class="btn btn-danger" href="#">View Events &raquo;</a></p>
     </div>
     <div class="col-md-4">
-        <h2>Latest Technology</h2>
+        <h2>Cutting Edge</h2>
+        <p><img src="/Content/Images/technology.png" alt="Technology" class="img-rounded img-responsive"></p>
         <p>360&deg; HD cameras, blah blah blah</p>
         <p style="margin-top: 20px"><a class="btn btn-danger" href="#">Learn More &raquo;</a></p>
     </div>
     <div class="col-md-4">
         <h2>Worldwide Venues</h2>
+        <p></p><img src="/Content/Images/venue_Arsenal.png" alt="Venues" class="img-rounded img-responsive"></p>
         <p>With realxp you have access to the best venues around the world, virtually.</p>
-        <img src="/Content/Images/venue_Arsenal.png" alt="Atmosphere" class="img-rounded img-responsive">
-        <p style="margin-top: 20px"><a class="btn btn-danger" href="#">View Venues &raquo;</a></p>
+        <p style="margin-top: 20px"><a class="btn btn-danger" href="/Venue">View Venues &raquo;</a></p>
     </div>
 </div>
