--- a/app/realXP/Views/Venue/Index.cshtml
+++ b/app/realXP/Views/Venue/Index.cshtml
@@ -12,13 +12,16 @@
 <table class="table">
     <tr>
         <th>
+            @Html.DisplayNameFor(model => model.venue_image)
+        </th>
+        <th>
             @Html.DisplayNameFor(model => model.venue_name)
         </th>
         <th>
             @Html.DisplayNameFor(model => model.venue_country)
         </th>
         <th>
-            @Html.DisplayNameFor(model => model.venue_city)
+            Html.DisplayNameFor(model => model.venue_city)
         </th>
         <th>
             @Html.DisplayNameFor(model => model.venue_state)
@@ -36,13 +39,16 @@
             @Html.DisplayNameFor(model => model.venue_postcode)
         </th>
         <th>
-            @Html.DisplayNameFor(model => model.venue_image)
+            
         </th>
         <th></th>
     </tr>
 
 @foreach (var item in Model) {
     <tr>
+        <td>
+            <img src="@Url.Content("~/Content/Images/Events/")@Html.DisplayFor(modelItem => item.venue_image)" alt="@Html.DisplayFor(modelItem => item.venue_name)" class="img-thumbnail"> 
+        </td>
         <td>
             @Html.DisplayFor(modelItem => item.venue_name)
         </td>
@@ -66,9 +72,6 @@
         </td>
         <td>
             @Html.DisplayFor(modelItem => item.venue_postcode)
-        </td>
-        <td>
-            @Html.DisplayFor(modelItem => item.venue_image)
         </td>
         <td>
             @Html.ActionLink("Edit", "Edit", new { id=item.venueID }) |
