--- a/app/realXP/Views/Venue/Index.cshtml
+++ b/app/realXP/Views/Venue/Index.cshtml
@@ -21,22 +21,7 @@
             @Html.DisplayNameFor(model => model.venue_country)
         </th>
         <th>
-            Html.DisplayNameFor(model => model.venue_city)
-        </th>
-        <th>
-            @Html.DisplayNameFor(model => model.venue_state)
-        </th>
-        <th>
-            @Html.DisplayNameFor(model => model.venue_address_1)
-        </th>
-        <th>
-            @Html.DisplayNameFor(model => model.venue_address_2)
-        </th>
-        <th>
-            @Html.DisplayNameFor(model => model.venue_address_3)
-        </th>
-        <th>
-            @Html.DisplayNameFor(model => model.venue_postcode)
+            @Html.DisplayNameFor(model => model.venue_city)
         </th>
         <th>
             
@@ -47,7 +32,7 @@
 @foreach (var item in Model) {
     <tr>
         <td>
-            <img src="@Url.Content("~/Content/Images/Events/")@Html.DisplayFor(modelItem => item.venue_image)" alt="@Html.DisplayFor(modelItem => item.venue_name)" class="img-thumbnail"> 
+            <img src="@Url.Content("~/Content/Images/Venues/")@Html.DisplayFor(modelItem => item.venue_image)" alt="@Html.DisplayFor(modelItem => item.venue_name)" class="img-thumbnail"> 
         </td>
         <td>
             @Html.DisplayFor(modelItem => item.venue_name)
@@ -57,21 +42,6 @@
         </td>
         <td>
             @Html.DisplayFor(modelItem => item.venue_city)
-        </td>
-        <td>
-            @Html.DisplayFor(modelItem => item.venue_state)
-        </td>
-        <td>
-            @Html.DisplayFor(modelItem => item.venue_address_1)
-        </td>
-        <td>
-            @Html.DisplayFor(modelItem => item.venue_address_2)
-        </td>
-        <td>
-            @Html.DisplayFor(modelItem => item.venue_address_3)
-        </td>
-        <td>
-            @Html.DisplayFor(modelItem => item.venue_postcode)
         </td>
         <td>
             @Html.ActionLink("Edit", "Edit", new { id=item.venueID }) |
