--- a/app/realXP/Views/Venue/Create.cshtml
+++ b/app/realXP/Views/Venue/Create.cshtml
@@ -1,10 +1,10 @@
 ﻿@model realxp.venue
 
 @{
-    ViewBag.Title = "Create";
+    ViewBag.Title = "Add a Venue";
 }
 
-<h2>Create</h2>
+<h2>@ViewBag.Title</h2>
 
 
 @using (Html.BeginForm()) 
@@ -12,7 +12,6 @@
     @Html.AntiForgeryToken()
     
     <div class="form-horizontal">
-        <h4>venue</h4>
         <hr />
         @Html.ValidationSummary(true)
 
