--- a/app/realXP/Views/Venue/Details.cshtml
+++ b/app/realXP/Views/Venue/Details.cshtml
@@ -1,23 +1,15 @@
 ﻿@model realxp.venue
 
 @{
-    ViewBag.Title = "Details";
+    ViewBag.Title = "Venue Details";
 }
 
-<h2>Details</h2>
+<h2>@ViewBag.Title</h2>
 
 <div>
-    <h4>venue</h4>
+    <h4>@Html.DisplayFor(model => model.venue_name)</h4>
 	<hr />
     <dl class="dl-horizontal">
-        <dt>
-            @Html.DisplayNameFor(model => model.venue_name)
-        </dt>
-
-        <dd>
-            @Html.DisplayFor(model => model.venue_name)
-        </dd>
-
         <dt>
             @Html.DisplayNameFor(model => model.venue_country)
         </dt>
