--- a/app/realXP/Views/Venue/Edit.cshtml
+++ b/app/realXP/Views/Venue/Edit.cshtml
@@ -1,10 +1,10 @@
 ﻿@model realxp.venue
 
 @{
-    ViewBag.Title = "Edit";
+    ViewBag.Title = "Edit Venue";
 }
 
-<h2>Edit</h2>
+<h2>@ViewBag.Title</h2>
 
 
 @using (Html.BeginForm())
@@ -12,7 +12,6 @@
     @Html.AntiForgeryToken()
     
     <div class="form-horizontal">
-        <h4>venue</h4>
         <hr />
         @Html.ValidationSummary(true)
         @Html.HiddenFor(model => model.venueID)
