--- a/app/realxp/Views/LiveEvent/Create.cshtml
+++ b/app/realxp/Views/LiveEvent/Create.cshtml
@@ -1,10 +1,10 @@
 ﻿@model realxp.liveevent
 
 @{
-    ViewBag.Title = "Create";
+    ViewBag.Title = "Add an Event";
 }
 
-<h2>Create</h2>
+<h2>@ViewBag.Title</h2>
 
 
 @using (Html.BeginForm()) 
