--- a/app/realxp/Views/LiveEvent/Details.cshtml
+++ b/app/realxp/Views/LiveEvent/Details.cshtml
@@ -1,13 +1,13 @@
 ﻿@model realxp.liveevent
 
 @{
-    ViewBag.Title = "Details";
+    ViewBag.Title = "Event Details";
 }
 
-<h2>Details</h2>
+<h2>Event Details</h2>
 
 <div>
-    <h4>liveevent</h4>
+    <h4>@Html.DisplayFor(model => model.liveevent_name)</h4>
 	<hr />
     <dl class="dl-horizontal">
         <dt>
@@ -24,14 +24,6 @@
 
         <dd>
             @Html.DisplayFor(model => model.liveevent_end_time)
-        </dd>
-
-        <dt>
-            @Html.DisplayNameFor(model => model.liveevent_name)
-        </dt>
-
-        <dd>
-            @Html.DisplayFor(model => model.liveevent_name)
         </dd>
 
         <dt>
