--- a/app/realXP/Views/Home/About.cshtml
+++ b/app/realXP/Views/Home/About.cshtml
@@ -1,7 +1,8 @@
 ﻿@{
     ViewBag.Title = "About";
 }
-
-<h2>Ever wanted to attend your favourite sporting or music event but couldn’t make it to the venue?</h2>
+<img class="img-responsive" alt="realxp" src="@Url.Content("~/Content/Images/realxp-dark.png")" />
+<p class="lead">Experience and interact with amazing live events around the world from the comfort of your home.</p>
+<p>Ever wanted to attend your favourite sporting or music event but couldn’t make it to the venue?</pstyle>
 <p>What if you could be best seat for the Champions League final, live from the comfort of your own home?</p>
 <p>Virtual Reality is now a reality... using live, high definition, stereoscopic 360˚ views and Dolby TrueHD&reg; audio, realxp puts you in the venue for the real experience.</p>
