--- a/app/realXP/Views/Home/Index.cshtml
+++ b/app/realXP/Views/Home/Index.cshtml
@@ -21,7 +21,7 @@
         <p><img src="@Url.Content("~/Content/Images/technology.png")" alt="Immerse" class="img-rounded img-responsive"></p>
         <p>360&deg; HD cameras, Dolby&reg; TrueHD sound provide a rich, amtospheric exeprience on your Oculus VR&reg; headset, laptop or mobile device.</p>
         <p>You will truly feel like you are there!</p>
-        <p style="margin-top: 20px"><a class="btn btn-danger" href="@Url.Action("Index","Home")">Learn More &raquo;</a></p>
+        <p style="margin-top: 20px"><a class="btn btn-danger" href="@Url.Action("About","Home")">Learn More &raquo;</a></p>
     </div>
     <div class="col-md-4">
         <h2>Worldwide Venues</h2>
