--- a/app/realXP/Views/Shared/_Layout.cshtml
+++ b/app/realXP/Views/Shared/_Layout.cshtml
@@ -39,7 +39,7 @@
                     <li>@Html.ActionLink("Home", "Index", "Home")</li>
                     <li>@Html.ActionLink("Events", "Index", "LiveEvent")</li>
                     <li>@Html.ActionLink("Venues", "Index", "Venue")</li>
-                    <li>@Html.ActionLink("Join Live Event", "Join", "Home")</li>
+                    <li>@Html.ActionLink("Join Live Event", "Index", "Home")</li>
                     <li>@Html.ActionLink("About", "About", "Home")</li>
                 </ul>
                 @Html.Partial("_LoginPartial")
